--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,27 @@
       <div class="content top" id="about">
         <div class="close">&times;</div>
         <h1>about me</h1>
-        <div class="desc">oh haiiiiii</div>
+        <div class="desc">
+          <img id="myface" src="images/myface.jpg"/>
+          <p> I'm currently a senior at Brown University studying Math and Computer Science (and little bits of everything else).</p>
+          <p> If I'm not writing codez or proofs, I'm most likely watching a movie. I might also be playing the cello, dancing like a fool at a concert, or eating tacos from the local food truck.</p>
+          <br>
+          <p> Wanna see my resume? <a href="files/resume.pdf" target="_blank">Here it is!</a></p>
+          <p> Wanna chat? Say hello at <a href="mailto:lizneu08@gmail.com?Subject=Oh+haii">lizneu08@gmail.com</a></p>
+        </div>
       </div>
       <div class="content bottom" id="projects">
         <div class="close">&times;</div>
         <h1>projects</h1>
-        <div class="desc">look at all the things i've done. wheeeeeeee</div>
+        <div class="desc">
+          <h2 class="project"><a href="http://thumbwar.me" target="_blank">Thumbwar</a></h2>
+          <p> Thumbwar is a video game platform written in Javascript. It lets you and your friends compete in a series of minigames: think Mario Party for your phone. I wrote it with <a href="http://rofreg.com" target="_blank">Ryan Laughlin</a> and <a href="http://kyletns.com" target="_blank">Kyle Nichols-Schmolze</a> at the <a href="http://downcityjs.com" target="_blank">DowncityJS</a> hackathon in February 2013.</p>
+          <h2 class="project"><a href="https://github.com/jcmiranda/FreeTimeFinder" target="_blank">Kairos</a></h2>
+          <p>Kairos is a Java-based desktop app that allows you to integrate your Google Calendar with <a href="http://www.when2meet.com" target="_blank">When2Meet</a> when trying to plan a meeting. I wrote it with Jeanette Miranda, Roie Levin, and Kelly Buckley as a term project for CS0320 (Intro to Software Engineering) in Spring 2012.</p>
+          <br>
+          <p> I also worked on lots of projects while interning for <a href="http://www.splitwise.com/about" target="_blank">Splitwise</a> and <a href="http://www.google.com/about/company/" target="_blank">Google</a>. Check out my <a href="files/resume.pdf" target="_blank">resume</a> for all the gory details.
+          </p>
+        </div>
       </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
