--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Liz Neu</title>
     <meta content="Liz Neu" name="author">
+    <link rel='icon' href="images/favicon.ico">
     <link href="http://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet">
   <style type="text/css"></style></head>
